<resources>
    <string name="app_name">Project1</string>
    <string name="name_of_app">Fridge Friend</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score_a">0</string>
    <string name="score_b">0</string>
    <string name="add_3_a">+3 POINTS</string>
    <string name="add_3_b">+3 POINTS</string>
    <string name="add_2_a">+2 POINTS</string>
    <string name="add_2_b">+2 POINTS</string>
    <string name="free_throw_a">FREE THROW</string>
    <string name="free_throw_b">FREE THROW</string>
    <string name="reset">RESET</string>
    <string name="game_over">Game Over</string>
    <string name="winner">Winner!</string>
    <string name="add_item_title">Add Item</string>
    <string name="saved">Item Added</string>
    <string name="save">Save</string>
    <string name="new_game">New Game</string>
    <string name="submit_button">SUBMIT</string>
    <string name="food_name_hint">Food Name</string>
    <string name="exp_date_hint">Expiration Date</string>
    <string name="default_web_client_id" translatable="false">123.apps.googolplexes.com</string>
    <string name="history_games">Game History</string>
    <string name="team_a_name">Team A Name:</string>
    <string name="team_b_name">Team B Name:</string>
    <string name="team_a_name_hint">Team A Name</string>
    <string name="team_b_name_hint">Team B Name</string>
    <string name="parrot_icon">Parrot Icon</string>
    <string name="pirate_icon">Pirate Icon</string>
    <string name="fridge_friend">Fridge Friend</string>

    <string name="btnSignIn">Sign In</string>
    <string name="list_of_existing_food">List Of Existing Food</string>
    <string name="list_for_shopping">Shopping List</string>

    <string name="food_in_my_fridge">Food In My Fridge</string>
    <string name="add_item">Add Item</string>
    <string name="item">Item</string>
    <string name="expiration">Expiration</string>

</resources>