<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center"
    tools:context=".ListActivity">

    <TextView
        android:id="@+id/fridge_friend_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:textSize="28sp"
        android:text="@string/fridge_friend"
        android:textColor="#5d5d5d" />
    <TextView
        android:id="@+id/list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="28sp"
        android:gravity="center"
        android:background="@color/light_green"
        android:text="@string/food_in_my_fridge"
        android:textColor="#5d5d5d" />

    <Button
        android:id="@+id/add_item"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:backgroundTint="#c2c2c2"
        android:text="@string/add_item"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:dividerPadding="5dp"
        android:gravity="center">

        <TextView
            android:id="@+id/item_heading"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@color/light_grey"
            android:text="@string/item"
            android:textColor="#5d5d5d" />

        <TextView
            android:id="@+id/expiration_heading"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:gravity="left"
            android:background="@color/light_grey"
            android:text="@string/expiration"
            android:textColor="#5d5d5d" />

    </LinearLayout>

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_fragment_container"
        android:gravity="center"
        android:orientation="vertical">

    </FrameLayout>

</LinearLayout>