<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center"
    tools:context=".AddFoodActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:dividerPadding="5dp"
        android:gravity="center">

        <TextView
            android:id="@+id/save_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:text="@string/saved"
            android:textColor="#32cd32"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/add_food_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="80dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:textSize="40sp"
            android:text="@string/add_item_title"
            android:textColor="#5d5d5d" />


        <EditText
            android:id="@+id/food_name_input"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/food_name_hint"
            android:inputType="text"
            android:gravity="center"/>

        <Button
            android:id="@+id/pickDateBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#c2c2c2"
            android:text="Expiration Date"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/exp_date_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/exp_date_hint"
            android:inputType="text"
            android:textSize="15sp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/food_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:cropToPadding="true"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="30dp"            />

        <ImageButton
            android:id="@+id/food_camera"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:src="@android:drawable/ic_menu_camera"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#c2c2c2"
            android:text="@string/submit_button"
            android:textColor="@android:color/black" />

    </LinearLayout>
</LinearLayout>