<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center"
    tools:context=".SaveActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:dividerPadding="5dp"
        android:gravity="center">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="30dp"
            android:textSize="40sp"
            android:text="@string/name_of_app"
            android:textColor="#5d5d5d" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.665"
            />

        <Button
            android:id="@+id/existing_food_list"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:backgroundTint="#c2c2c2"
            android:text="@string/list_of_existing_food"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/shopping_list"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#c2c2c2"
            android:text="@string/list_for_shopping"
            android:textColor="@android:color/black" />

    </LinearLayout>
</LinearLayout>